istio/istio-raw/gateway/gateway-a.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: flask-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - "*"
    port:
      name: http
      number: 80
      protocol: HTTP
    #tls:
    #  mode: SIMPLE
    #  credentialName: wildcard-credential
