istio/istio-raw/gateway/virtualservice-a.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: flask-any-service-a-virtualservice
  namespace: default
spec:
  hosts:
  - '*'
  gateways:
  - flask-gateway
  http:
  - name: flask-any-service-a-virtualservice
    route:
    - destination:
        host: flask-any-service-a
        port:
          number: 8080
